--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,12 +7,13 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding: 8px;
+  margin: 0 auto;
 }
 
 .title {
   background: #e3f4ff;
-  padding: 10px;
+  padding: 8px;
   margin: 10px;
 }
 
@@ -25,6 +26,7 @@ body {
 .button-container {
   background: #e3f4ff;
   padding: 10px;
+  margin: 10px;
   text-align: center;
 }
 
@@ -32,6 +34,6 @@ button {
   display: block;
   background: white;
   border: 1px solid #eee;
-  padding: 15px;
+  padding: 10px 20px 10px 20px;
   margin: 0 auto;
 }
