--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -34,6 +34,6 @@ button {
   display: block;
   background: white;
   border: 1px solid #eee;
-  padding: 10px 20px 10px 20px;
+  padding: 10px 20px;
   margin: 0 auto;
 }
