--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +18,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 20px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 15px;
 }
 
 a {
@@ -22,4 +34,15 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  flex: 1;
+}
+
+.left-links{
+  margin-right: auto;
+  margin-left: 10px;
+}
+
+.right-links{
+  margin-left: auto;
+  margin-right: 10px;
 }
