--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,3 +1,4 @@
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -31,10 +32,10 @@ ul {
 a {
   font-size: 22px;
   background: white;
+  color: blue;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  flex: 1;
 }
 
 .left-links{
