--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .left-nav {
@@ -22,6 +23,8 @@ body {
 
 .right-nav {
   display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .profile-image {
@@ -30,13 +33,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
-}
-
-.logo {
-  color: rebeccapurple;
-  font-size: 32px;
-  font-weight: 900;
-  font-style: italic;
+  margin-right: 12px;
 }
 
 button {
@@ -45,6 +42,14 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+}
+
+.logo {
+  color: rebeccapurple;
+  font-size: 32px;
+  font-weight: 900;
+  font-style: italic;
+  margin-left: 10px;
 }
 
 a {
@@ -58,4 +63,7 @@ ul {
   padding: 0;
   margin: 0;
   display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-left: 20px;
 }
