change justify-content to center for extra margin on left and right

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,7 +10,7 @@ body {
 
 .info-items {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: flex-start;
   gap: 52px;
 }
