--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -15,7 +15,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex: 1
+  flex: 1;
+  padding: 3px;
 }
 
 .left-links {
@@ -33,15 +34,22 @@ body {
 }
 
 li a{
+  color: black;
   text-decoration: none;
   padding: 10px;
+}
+
+li a:hover{
+  color: goldenrod
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 8
+  gap: 8px;
+  justify-content: center;
+  flex: 10;
 }
 
 img {
@@ -53,6 +61,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -68,4 +77,5 @@ input {
   justify-content: space-between;
   align-items: center;
   flex: 1;
+  padding: 3px;
 }
