--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -9,7 +9,15 @@ body {
 .header {
   height: 72px;
   background: darkmagenta;
+  display: flex;
+  align-items: center;
+}
+
+h1 {
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
 }
 
 .container {
@@ -18,23 +26,27 @@ body {
 }
 
 .footer {
+  display: flex;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 250px;
   background: royalblue;
   box-sizing: border-box;
 }
 
 ul {
-  padding: 8px;
+  padding: 16px;
   margin: 0;
   display: flex;
   flex-direction: column;
   list-style-type: none;
+  gap: 10px;
 }
 
 li a {
@@ -46,8 +58,20 @@ li a:hover {
   color: black;
 }
 
+.content {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  gap: 15px;
+}
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 10px;
+  max-width: 300px;
+  min-height: 200px;
 }
