--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -36,6 +36,7 @@ h1 {
 
 .sidebar {
   min-width: 250px;
+  padding: 16px;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -62,8 +63,6 @@ li a:hover {
   padding: 48px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-content: space-evenly;
   gap: 15px;
 }
 
