--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-.container div {
+.container div:not(.main-container, .right-container){
   padding: 15px;
   font-size: 32px;
   font-family: Helvetica;
@@ -20,6 +20,7 @@
   display: grid;
   grid-template-columns: 1.2fr 1.8fr;
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .logo {
@@ -39,8 +40,19 @@
   gap: 18px;
 }
 
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr;
+  gap: 5px;
+}
+
 .sidebar {
   background-color: #C50208;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr;
+  gap: 15px;
 }
 
 .sidebar .photo {
@@ -51,7 +63,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -59,8 +70,20 @@
   font-weight: normal;
 }
 
+.right-container {
+  display: grid;
+  padding: 0;
+  margin: 0;
+}
+
 .nav {
   background-color: #C50208;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
 }
 
 .nav ul li {
@@ -97,6 +120,7 @@
 }
 
 .footer {
+  margin-top: 5px;
   background-color: #393f4d;
 }
 
